# django-piano-api

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: run-linters.yml  run-tests.yml
app/conf.d/: app.conf
backend/: .dockerignore  .env.example  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements.txt  requirementst.txt  setup.cfg
backend/config/: celery.py  settings.py  urls.py
backend/sheets/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/sheets/migrations/: 0001_initial.py  0002_rename_file_sheet_file_pdf.py  0003_alter_sheet_tags.py  0004_alter_sheet_tags.py  0005_alter_sheet_photo.py  0006_rename_author_category_user_rename_author_tag_user_and_more.py  0007_author_user.py
backend/tasks/: tasks.py
backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_photo.py  0003_alter_user_photo.py  0004_alter_user_managers.py
db/: Dockerfile  README.md
