[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vaduska <vadimsalapugin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
